--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "nuxt-i18n": "^6.28.1",
-    "vue-meta": "^2.4.0"
+    "vue-meta": "^2.4.0",
+    "vue-router": "^3.5.3"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
